# app-tche

./: .gitignore  24denov.md  package-lock.json
_externo_apptche/apptche/: FLUXO_DE_TELAS.md  IMPLEMENTACAO.md  PLANO_DE_PROJETO.md  README.md  package-lock.json  package.json  tailwind.config.js
_externo_apptche/apptche/meet/: jph-hxds-aqz (2025-10-16 13 14 GMT-3).docx  jph-hxds-aqz (2025-10-16 13 14 GMT-3).txt
_externo_apptche/apptche/src/: App.js  index.css
backend/: README.md  list_users.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202411241500_initial.py  202411241610_fk_sample_points_field_id.py  202411241650_fk_lab_analyses_and_recommendations.py  202411241700_add_spatial_columns.py
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  base.py  culture.py  field.py  lab_analysis.py  property.py  recommendation.py  sample_point.py  user.py
backend/app/routers/: analyses.py  auth.py  dashboard.py  fields.py  properties.py  recommendations.py  samples.py  users.py
backend/app/schemas/: field.py  lab_analysis.py  property.py  sample_point.py  user.py
backend/app/scripts/: __init__.py  list_tables.py  seed_user.py
backend/app/services/: geometry.py  recommendation_engine.py  sync.py
mobile/: App.tsx  README.md  app.json  package-lock.json  package.json  tsconfig.json
mobile/src/api/: client.ts
mobile/src/domain/: wkt.ts
mobile/src/navigation/: RootNavigator.tsx
mobile/src/screens/: AnalysesScreen.tsx  DashboardScreen.tsx  FieldsScreen.tsx  (+6 more)
(+26 files in other folders)
